--- a/styles.css
+++ b/styles.css
@@ -221,11 +221,27 @@ a:hover { text-decoration: underline; }
 
 .about-header-lines { margin-top: 1em; }
 
-.about-header-main, .about-header-tagline {
+.about-header-main {
   font-size: 1.08rem;
   color: var(--text-light);
   text-align: center;
   text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+}
+
+.about-header-tagline {
+  font-size: 1.08rem;
+  color: var(--text-light);
+  text-align: center;
+  text-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.line-divider {
+  display: none;
+  height: 1px;
+  background-color: white;
+  margin: 1rem auto;
+  filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
 }
 
 /* Section styling */
@@ -632,6 +648,10 @@ a:hover { text-decoration: underline; }
   }
   .about-header-lines {
     margin-top: 1em;
+  }
+  .line-divider {
+    display: block;
+    width: 60%;
   }
   .gyro-button {
     display: inline-block;
